# dude_cpp

./: README.md
Classic/Array/: README.md  array1.cpp  array10.cpp  array2.cpp  array4.cpp  array5.cpp  array9.cpp  chararray2.c
Classic/File/: file3.cpp
Classic/File Operations/: file2.cpp  file3.cpp
Classic/Pointer/: pointer2.cpp  pointer3.cpp  pointer7.cpp  pointer8.cpp  pointer9.cpp
Classic/Recursive/: recursive1.cpp
Classic/String/: string1.cpp  string3.cpp  string4.cpp
Classic/Struct/: struct2.cpp
Classic/Vector/: vector1.cpp  vector6.cpp  vector7.cpp
Frameworks/OpenCV_detection/cpp/detection/detect_vid/: CMakeLists.txt  detect_vid.cpp
Frameworks/Raylib_Meme_Menu/: Makefile  main.c  utils.c  utils.h
Frameworks/Raylib_test/: main.c
Frameworks/WebUI_browser/: html_content.hpp  index.html  main.cc
Modern/chapter1/: auto_init.cc  const_constexpr.cc  functions.cc  namespaces.cc  structs.cc
Modern/chapter2/: copy_reference.cc  heap.cc  pointer.cc
Modern/chapter3/: alias.cc  spans.cc
Tests/derivative/: main.cc
Tests/main_menu_tui/: app  main.cc
projects/: projects.sln
projects/Array/: array3.cpp  array6.cpp  array7.cpp  array8.cpp  chararray1.c
projects/File Operations/: file1.cpp  file4.cpp
projects/Filing/: filing1.cpp  filing2.cpp
projects/Pointer/: pointer1.cpp  pointer10.cpp  pointer11.cpp  pointer12.cpp  pointer3.cpp  pointer4.cpp  pointer5.cpp  pointer6.cpp
projects/Recursive/: Recursive.md
tests/opencv_test/cpp/detection/detect_img/: CMakeLists.txt  detect_img.cpp
tests/webui_test/: CMakeLists.txt  app.hpp
tests/webui_test/src/: .run.cc.kate-swp  run.cc  search.cc
(+38 files in other folders)
